tests/paczka1/fuzzy1/42354211.err
Error in line 6: zmtcfsB S800 96,2
Error in line 10: 3VBD1USI S800 52,6
Error in line 16: 7dLHSWGsp A497 24,1
Error in line 18: qYsLVM58Ai A677 81,7
Error in line 22: qYsLVM58Ai S800 25,50
Error in line 24: zmtcfsB A927 28,5
Error in line 25: zmtcfsB A497 75,1
Error in line 32: ju3xjILZ A497 80,3
Error in line 29: zmtcfsB A927 72,1
Error in line 34: ju3xjILZ A677 48,9
